// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete project chain 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\" class=\\"\\">Projects
        <!--default-->
      </a>
    </li>
    <li>
      <a href=\\"projects/1\\" class=\\"\\">Test
        <!--default-->
      </a>
    </li>
    <!--if-->
    <li>
      <a href=\\"projects/1/chains/2\\" class=\\"\\">Test chain
        <!--default-->
      </a>
    </li>
    <!--if-->
    <li>Delete</li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"modal\\">
    <div class=\\"content\\">
      <div class=\\"header\\">Delete project chain</div>
      <div class=\\"body\\">Do you want delete chain \\"Test chain\\"?</div>
      <div class=\\"footer\\">
        <button class=\\"ok danger\\"><span>Confirm</span></button>
        <button class=\\"cancel\\"><span>Cancel</span></button>
      </div>
    </div>
  </div>
  <!--ConfirmModal-->
  <!--if-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`delete project chain 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\" class=\\"\\">Projects
        <!--default-->
      </a>
    </li>
    <!--if-->
    <!--if-->
    <li>Test</li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-info\\">
    <h3>Test</h3>
    <dl>
      <dt>/tmp/</dt>
      <dd>Current work directory.</dd>
      <dd>This directory will be used when running tasks.</dd>
      <dt>
        <a href=\\"projects/1/edit\\" class=\\"\\">Edit
          <!--default-->
        </a>
      </dt>
      <dd>Edit project name &amp; cwd</dd>
      <dt>
        <a href=\\"projects/1/delete\\" class=\\"project-delete-link\\">Delete
          <!--default-->
        </a>
      </dt>
      <dd>Delete project</dd>
    </dl>
  </div>
  <div class=\\"project-chains\\">
    <h3>Chains</h3>
    <button class=\\"project-chain\\">Test chain</button>
    <!--if-->
    <!--Chain-->
    <!--for-->
    <a href=\\"projects/1/chains/create\\" class=\\"project-chain project-chain-create\\">
      <div class=\\"create-icon\\"></div>
      <!--default-->
    </a>
    <!--LinkTo-->
  </div>
  <!--Info-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
